...
        }
        .onTapGesture {
            isPresentingConfirm = true
        }
        .confirmationDialog("Mission \(model.missionName)", isPresented: $isPresentingConfirm) {
            if let id = model.youtubeId {
                Button("Watch Video", role: .none) {
                    webContent = .video(youtubeId: id)
                }
            }
            
            if let url = model.articleUrl {
                Button("Open Article", role: .none) {
...
                    webContent = .page(url: url)
                }
            }
        }
        .sheet(item: $webContent) { content in
            WebView(content: content)
                .accessibilityIdentifier("webview")
        }
    }
}

struct LaunchCellView_Previews: PreviewProvider {
    static var previews: some View {
...
