...
            case .loaded(let launches):
                ForEach(launches) { launch  in
                    LaunchCellView(model: model(for: launch))
                }
                .padding(.top, 16)
                .accessibility(addTraits: .isButton)
                .accessibility(identifier: "loadedList")
                
            case .failed(let message):
                ErrorCell(message: message, onButtonTap: onErrorTapped)
                    .padding(.top, 60)
            }
        }
...
